# s2-geometry-library

./: .travis.yml  README.md  travis.sh
geometry/python/: CMakeLists.txt
